updated hopefully works